--- a/README
+++ b/README
@@ -33,7 +33,8 @@ FiXme consists of the following files:
 documents being developped (in draft mode). Such notes can appear in the
 margin of the document, as index entries, in the log file and as warnings on
 stdout. It is also possible to summarize them in a list. If your document is
-in a final version, any remaining fixme note will produce an error.
+in a final version, any remaining fixme note will produce an error. FiXme also
+comes with support for AUC-TeX.
 
 
 * Installation
