--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,14 @@
+2000-12-19  Didier Verna  <didier@lrde.epita.fr>
+
+	* fixme.dtx: added backslashes to macro names in calls to
+	\DescribeMacro.
+	Moved the descriptioni of \listfixmename to the "Main Macros"
+	section, and added a comment in the code.
+	Added support for german (from Harald Harders <h.harders@tu-bs.de>).
+
 2000-12-11  Didier Verna  <didier@lrde.epita.fr>
+
+	* fixme.dtx: ispell'ed.
 
 	* ChangeLog: new file.
 
