Committed PRCS version version-1-2.1
Version 1.2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-03-26  Didier Verna  <didier@lrde.epita.fr>
+
+	* version 1.2 released.
+
 2000-12-26  Didier Verna  <didier@lrde.epita.fr>
 
 	* fixme.ins: prettyfied the preamble.
