--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2,14 +2,14 @@
 %
 % fixme.dtx --- Doc file for the FiXme package (code and documentation)
 %
-% Copyright (C) 1998-2000 Didier Verna.
+% Copyright (C) 1998-2001 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.28 Tue, 26 Dec 2000 13:58:43 +0100 didier $
+% PRCS: $Id: fixme.dtx 1.29 Mon, 26 Mar 2001 18:19:28 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
 % Created:       Thu Dec 10 16:04:01 1998
-% Last Revision: Thu Dec 10 16:04:01 1998
+% Last Revision: Mon Mar 26 18:10:18 2001
 %
 % This file is part of FiXme.
 %
@@ -64,9 +64,9 @@
 % ^^A $Format: "% \\newcommand{\\version}{v$Version$}"$
 % \newcommand{\version}{v1.2}
 % ^^A $Format: "% \\newcommand{\\releasedate}{$ReleaseDate$}"$
-% \newcommand{\releasedate}{2000/12/19}
+% \newcommand{\releasedate}{2001/03/26}
 % ^^A $Format: "% \\newcommand{\\packagecopyright}{$LaTeXCopyright$}"$
-% \newcommand{\packagecopyright}{Copyright \copyright{} 1998--2000 Didier Verna}
+% \newcommand{\packagecopyright}{Copyright \copyright{} 1998--2001 Didier Verna}
 % \newcommand{\fixme}{\textsf{FiXme}}
 % \newcommand{\auctex}{AUC-\TeX}
 % \MakeShortVerb{\|}
@@ -76,7 +76,7 @@
 % \version, release date \releasedate.}}
 % \author{Didier Verna\\
 % \texttt{mailto:didier@lrde.epita.fr}\\
-% \texttt{http://www.inf.enst.fr/\~{}verna}}
+% \texttt{http://www.lrde.epita.fr/\~{}didier/}}
 % \maketitle
 %
 %
@@ -219,6 +219,12 @@
 % \LaTeX{} styles directory). Please refer to the \auctex{} documentation for
 % more information on this.
 %
+% \section{Changes}
+% \begin{itemize}
+% \item[v1.2] Support for German thanks to Harald Harders
+%   |<h.harders@tu-bs.de>|.
+% \end{itemize}
+%
 % \StopEventually{\par Well, I think that's it. Enjoy using \fixme{}!
 %   \vfill\hfill\small \packagecopyright{}.}
 %
@@ -226,7 +232,7 @@
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
 ¡ $Format: "\\ProvidesPackage{fixme}[$ReleaseDate$ v$Version$"$
-\ProvidesPackage{fixme}[2000/12/19 v1.2
+\ProvidesPackage{fixme}[2001/03/26 v1.2
                         Insert fixme notes in your draft documents]
 
 %    \end{macrocode}
