--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2001 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.29 Mon, 26 Mar 2001 18:19:28 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.30 Mon, 23 Apr 2001 12:07:55 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -146,11 +146,11 @@
 % \DescribeEnv{german}
 % \DescribeEnv{ngerman}
 % ^^A \changes{v1.2}{2000/12/26}{Support for German thanks to Harald Harders}
-% \fixme{} currently supports English, French and German. This actually
-% only has the effect of modifying the title of the ``list of fixmes'' if you
-% happen to use it. The \texttt{french} and \texttt{francais} options are
-% synonyms. The \texttt{german} and \texttt{ngerman} options are currently
-% equivalent.
+% \fixme{} currently supports English, French, German and Italian. This
+% actually only has the effect of modifying the title of the ``list of
+% fixmes'' if you happen to use it. The \texttt{french} and \texttt{francais}
+% options are synonyms. The \texttt{german} and \texttt{ngerman} options are
+% currently equivalent.
 %
 % \subsection{Layout options}
 % These options are specific to \fixme{} and control the layout of the fixme
@@ -381,6 +381,7 @@
 \DeclareOption{francais}{\ExecuteOptions{french}}
 \DeclareOption{german}{\renewcommand*{\listfixmename}{Liste der FIXME's}}
 \DeclareOption{ngerman}{\ExecuteOptions{german}}
+\DeclareOption{italian}{\renewcommand*{\listfixmename}{Corrigenda}}
 
 %    \end{macrocode}
 % \subsection{Options processing}
