--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-04-23  Didier Verna  <didier@lrde.epita.fr>
+
+	* fixme.dtx: added support for Italian (from Riccardo Murri
+	<murri@phc.unipi.it>)
+
 2001-03-26  Didier Verna  <didier@lrde.epita.fr>
 
 	* version 1.2 released.
