--- a/README
+++ b/README
@@ -40,6 +40,10 @@ error. FiXme also comes with support for AUC-TeX.
 * Changes
 =========
 
+** Version 1.3
+--------------
+*** Support for Italian thanks to Riccardo Murri <murri@phc.unipi.it>
+
 ** Version 1.2
 --------------
 *** Support for German thanks to Harald Harders <h.harders@tu-bs.de>
