--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2001 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.30 Mon, 23 Apr 2001 12:07:55 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.31 Mon, 23 Apr 2001 12:21:26 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -44,7 +44,7 @@
 % \fi
 %
 % \catcode`\¡=14
-% \CheckSum{208}
+% \CheckSum{211}
 %% \CharacterTable
 %%  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
 %%   Lower-case    \a\b\c\d\e\f\g\h\i\j\k\l\m\n\o\p\q\r\s\t\u\v\w\x\y\z
@@ -62,9 +62,9 @@
 %%   Right brace   \}     Tilde         \~}
 %
 % ^^A $Format: "% \\newcommand{\\version}{v$Version$}"$
-% \newcommand{\version}{v1.2}
+% \newcommand{\version}{v1.3}
 % ^^A $Format: "% \\newcommand{\\releasedate}{$ReleaseDate$}"$
-% \newcommand{\releasedate}{2001/03/26}
+% \newcommand{\releasedate}{2001/04/23}
 % ^^A $Format: "% \\newcommand{\\packagecopyright}{$LaTeXCopyright$}"$
 % \newcommand{\packagecopyright}{Copyright \copyright{} 1998--2001 Didier Verna}
 % \newcommand{\fixme}{\textsf{FiXme}}
@@ -145,6 +145,7 @@
 % \DescribeEnv{francais}
 % \DescribeEnv{german}
 % \DescribeEnv{ngerman}
+% ^^A \changes{v1.3}{2001/04/23}{Support for Italian thanks to Riccardo Murri}
 % ^^A \changes{v1.2}{2000/12/26}{Support for German thanks to Harald Harders}
 % \fixme{} currently supports English, French, German and Italian. This
 % actually only has the effect of modifying the title of the ``list of
@@ -221,6 +222,8 @@
 %
 % \section{Changes}
 % \begin{itemize}
+% \item[v1.3] Support for Italian thanks to Riccardo Murri
+%   |<murri@phc.unipi.it>|.
 % \item[v1.2] Support for German thanks to Harald Harders
 %   |<h.harders@tu-bs.de>|.
 % \end{itemize}
@@ -232,7 +235,7 @@
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
 ¡ $Format: "\\ProvidesPackage{fixme}[$ReleaseDate$ v$Version$"$
-\ProvidesPackage{fixme}[2001/03/26 v1.2
+\ProvidesPackage{fixme}[2001/04/23 v1.3
                         Insert fixme notes in your draft documents]
 
 %    \end{macrocode}
