Committed PRCS version version-1-3.1
Version 1.3 released.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2001-04-23  Didier Verna  <didier@lrde.epita.fr>
 
+	* version 1.3 released.
+
 	* fixme.dtx: added support for Italian (from Riccardo Murri
 	<murri@phc.unipi.it>)
 
