--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998-2001 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.31 Mon, 23 Apr 2001 12:21:26 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.32 Mon, 23 Apr 2001 13:54:43 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -145,6 +145,7 @@
 % \DescribeEnv{francais}
 % \DescribeEnv{german}
 % \DescribeEnv{ngerman}
+% \DescribeEnv{italian}
 % ^^A \changes{v1.3}{2001/04/23}{Support for Italian thanks to Riccardo Murri}
 % ^^A \changes{v1.2}{2000/12/26}{Support for German thanks to Harald Harders}
 % \fixme{} currently supports English, French, German and Italian. This
