--- a/README
+++ b/README
@@ -64,10 +64,10 @@ a suitable AUC-TeX style directory.
 	Have fun!
 
 --
-    /     /   _   _       Didier Verna      http://www.lrde.epita.fr/~didier/
- - / / - / / /_/ /        EPITA / LRDE         mailto:didier@lrde.epita.fr
-/_/ / /_/ / /__ /      14-16 rue Voltaire       Tel.  +33 (1) 53 14 59 47
-                  94276 Kremlin-Bicêtre France  Fax.  +33 (1) 44 08 01 99
+Didier Verna, didier@lrde.epita.fr, http://www.lrde.epita.fr/~didier
+
+EPITA / LRDE, 14-16 rue Voltaire   Tel.+33 (1) 53 14 59 47
+94276 Le Kremlin-Bicêtre, France   Fax.+33 (1) 44 08 01 99   didier@xemacs.org
 
 
 
